--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,11 +26,14 @@ website:
         - posts//math_I/index.qmd
         - section: "지수함수와 로그함수"
           contents:
-          - posts/math_I/function/function.qmd
-          - posts/math_I/function/exponent.qmd
-          - posts/math_I/function/concept_exponent.qmd             
-          - posts/math_I/function/day1.qmd   
-          - posts/math_I/function/day2.qmd   
+          - posts/math_I/exponent/curriculum.qmd     
+          - posts/math_I/exponent/exponent.qmd
+          - posts/math_I/exponent/concept_exponent.qmd             
+          - posts/math_I/exponent/day1.qmd   
+          - posts/math_I/exponent/day2.qmd 
+        - section: "사칙연산"
+          contents:
+          - posts/math_I/sequence/sequence.qmd          
     - title: "Python"
       collapse-level: 2
       contents:
