--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,7 +30,7 @@ website:
           - posts/math_I/exponent/concept_exponent.qmd
           - posts/math_I/exponent/exercise1.qmd
           - posts/math_I/exponent/exercise2.qmd   
-          - posts/math_I/exponent/exercise3.qmd 
+          # - posts/math_I/exponent/exercise3.qmd 
           - posts/math_I/exponent/exercise4.qmd           
         - section: "사칙연산"
           contents:
